// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identify-with-password Client-side field change validation tests fails client side validation with no inputs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-6"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-7"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-8"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-9"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-10"
              >
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-12"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-13"
                      data-se="o-form-head"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-16"
                      for="identifier"
                    >
                      Username
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-17"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                    >
                      <input
                        aria-describedby="identifier-error"
                        aria-invalid="true"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-19"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-20"
                      >
                        <legend
                          class="emotion-21"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-15"
                    >
                      <label
                        class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                        for="credentials.passcode"
                      >
                        Password *
                      </label>
                      <div
                        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-27"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-invalid="true"
                          autocomplete="current-password"
                          class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-28"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-29"
                        >
                          <button
                            aria-label="toggle password visibility"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-30"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                              data-testid="VisibilityIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline emotion-20"
                        >
                          <legend
                            class="emotion-21"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-36"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-37"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-38"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-39"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                      >
                        Keep me signed in
                      </span>
                    </label>
                    <p
                      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-22"
                      data-se="rememberMe-error"
                      id="rememberMe-error"
                      role="alert"
                    />
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-44"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="o-form-explain"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-6"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-7"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-8"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-9"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-10"
              >
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-12"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-13"
                      data-se="o-form-head"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-16"
                      for="identifier"
                    >
                      Username
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-17"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                    >
                      <input
                        aria-describedby="identifier-error"
                        aria-invalid="true"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-19"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-20"
                      >
                        <legend
                          class="emotion-21"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-15"
                    >
                      <label
                        class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                        for="credentials.passcode"
                      >
                        Password *
                      </label>
                      <div
                        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-27"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-invalid="true"
                          autocomplete="current-password"
                          class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-28"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-29"
                        >
                          <button
                            aria-label="toggle password visibility"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-30"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                              data-testid="VisibilityIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline emotion-20"
                        >
                          <legend
                            class="emotion-21"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-36"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-37"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-38"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-39"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                      >
                        Keep me signed in
                      </span>
                    </label>
                    <p
                      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-22"
                      data-se="rememberMe-error"
                      id="rememberMe-error"
                      role="alert"
                    />
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-44"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="o-form-explain"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty and type in one of the required fields to remove error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-6"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-7"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-8"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-9"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-10"
              >
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-12"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-13"
                      data-se="o-form-head"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-16"
                      for="identifier"
                    >
                      Username
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-17"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                    >
                      <input
                        aria-describedby="identifier-error"
                        aria-invalid="true"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-19"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-20"
                      >
                        <legend
                          class="emotion-21"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-15"
                    >
                      <label
                        class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                        for="credentials.passcode"
                      >
                        Password *
                      </label>
                      <div
                        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-27"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-invalid="true"
                          autocomplete="current-password"
                          class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-28"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-29"
                        >
                          <button
                            aria-label="toggle password visibility"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-30"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                              data-testid="VisibilityIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline emotion-20"
                        >
                          <legend
                            class="emotion-21"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-22"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-36"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-37"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-38"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-39"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                      >
                        Keep me signed in
                      </span>
                    </label>
                    <p
                      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-22"
                      data-se="rememberMe-error"
                      id="rememberMe-error"
                      role="alert"
                    />
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-44"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-11"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="o-form-explain"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`identify-with-password renders form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-5"
              >
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-8"
                      data-se="o-form-head"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-11"
                      for="identifier"
                    >
                      Username
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-12"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-13"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-14"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-15"
                      >
                        <legend
                          class="emotion-16"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-10"
                    >
                      <label
                        class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-11"
                        for="credentials.passcode"
                      >
                        Password *
                      </label>
                      <div
                        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-21"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="current-password"
                          class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-22"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-23"
                        >
                          <button
                            aria-label="toggle password visibility"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-24"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-25"
                              data-testid="VisibilityIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline emotion-15"
                        >
                          <legend
                            class="emotion-16"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-29"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-30"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-31"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-32"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-25"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-34"
                      >
                        Keep me signed in
                      </span>
                    </label>
                    <p
                      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-35"
                      data-se="rememberMe-error"
                      id="rememberMe-error"
                      role="alert"
                    />
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-37"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth emotion-41"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-42"
                >
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <div
                      class="MuiBox-root emotion-7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-45"
                        data-se="o-form-explain"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`identify-with-password renders the loading state first 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <span
                aria-label="Loading..."
                aria-valuetext="Loading..."
                class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-6"
                role="progressbar"
                style="width: 1.14285714rem; height: 1.14285714rem;"
              >
                <svg
                  class="MuiCircularProgress-svg emotion-7"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-8"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="18"
                    stroke-width="8"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;
